--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,4 +17,19 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: $textColor;
+  padding: 30px;
+}
+
+//Header
+header {
+  height: 95vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($lightGreen, 0.8),
+      rgba($darkGreen, 0.8)
+    ),
+    url(./img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
