--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,36 @@ body {
   padding: 30px; }
 
 header {
+  position: relative;
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(./img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px; }
+  .logo-box .logo {
+    height: 35px; }
+
+.text-box {
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%); }
+  .text-box .heading-primary {
+    color: #fff;
+    text-transform: uppercase; }
+    .text-box .heading-primary .heading-primary-main {
+      display: block;
+      font-size: 60px;
+      font-weight: 400;
+      letter-spacing: 35px; }
+    .text-box .heading-primary .heading-primary-sub {
+      display: block;
+      font-size: 20px;
+      font-weight: 400;
+      letter-spacing: 17.4px; }
