--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@ $darkGreen: #28b485;
 
 $textColor: #777;
 $white: #fff;
+$black: #000;
 
 //reset
 * {
@@ -54,6 +55,7 @@ header {
   left: 50%;
   transform: translateX(-50%);
   .heading-primary {
+    margin-bottom: 20px;
     color: $white;
     text-transform: uppercase;
     //fix for shaking animation
@@ -76,6 +78,63 @@ header {
       //animation
       animation: moveInRight 0.8s ease-in;
     }
+  }
+}
+
+.btn {
+  animation: fadeIn 2s;
+  position: relative;
+  padding: 15px 40px;
+  display: inline-block;
+  color: $textColor;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 100px;
+
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba($black, 0.2);
+    transition: all 0.2s;
+
+    &::after {
+      transform: scale(1.2);
+      opacity: 0;
+    }
+  }
+
+  &:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba($black, 0.2);
+  }
+
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+
+  &-white {
+    background-color: $white;
+    &::after {
+      background-color: $white;
+    }
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
 
