--- a/public/style.css
+++ b/public/style.css
@@ -3,13 +3,15 @@
   padding: 0;
   box-sizing: border-box; }
 
+html {
+  font-size: 62.5%; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.7;
   color: #777;
-  padding: 30px; }
+  padding: 3rem; }
 
 header {
   position: relative;
@@ -19,70 +21,71 @@ header {
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px; }
-  .logo-box .logo {
-    height: 35px; }
+  top: 4rem;
+  left: 4rem; }
+  .header__logo-box .header__logo {
+    height: 3.5rem; }
 
-.text-box {
+.header__text-box {
   text-align: center;
   position: absolute;
   top: 30%;
   left: 50%;
   transform: translateX(-50%); }
-  .text-box .heading-primary {
-    margin-bottom: 20px;
+  .header__text-box .heading-primary {
+    margin-bottom: 2rem;
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden; }
-    .text-box .heading-primary .heading-primary-main {
+    .header__text-box .heading-primary .heading-primary--main {
       display: block;
-      font-size: 60px;
+      font-size: 6rem;
       font-weight: 400;
-      letter-spacing: 35px;
+      letter-spacing: 3.5rem;
       animation: moveInLeft 0.8s ease-in; }
-    .text-box .heading-primary .heading-primary-sub {
+    .header__text-box .heading-primary .heading-primary--sub {
       display: block;
-      font-size: 20px;
+      font-size: 2rem;
       font-weight: 400;
-      letter-spacing: 17.4px;
+      letter-spacing: 1.74rem;
       animation: moveInRight 0.8s ease-in; }
 
 .btn {
   animation: fadeIn 2s;
   position: relative;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
   color: #777;
   text-decoration: none;
   text-transform: uppercase;
-  border-radius: 100px; }
+  border-radius: 10rem;
+  font-size: 1.6rem; }
   .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
     transition: all 0.2s; }
     .btn:hover::after {
       transform: scale(1.2);
       opacity: 0; }
   .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
   .btn::after {
     content: "";
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
     transition: all 0.4s; }
-  .btn-white {
+  .btn--white {
     background-color: #fff; }
-    .btn-white::after {
+    .btn--white::after {
       background-color: #fff; }
 
 @keyframes fadeIn {
@@ -93,7 +96,7 @@ header {
 
 @keyframes moveInRight {
   0% {
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
     opacity: 0; }
   100% {
     transform: translateX(0);
@@ -101,7 +104,7 @@ header {
 
 @keyframes moveInLeft {
   0% {
-    transform: translateX(100px);
+    transform: translateX(10rem);
     opacity: 0; }
   100% {
     transform: translateX(0);
