--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,13 +14,17 @@ $black: #000;
   box-sizing: border-box;
 }
 
+html {
+  //setts the root size
+  font-size: 62.5%;
+}
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.7;
   color: $textColor;
-  padding: 30px;
+  padding: 3rem;
 }
 
 //Header
@@ -38,43 +42,44 @@ header {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 
-  .logo {
-    height: 35px;
+  .header__logo {
+    height: 3.5rem;
   }
 }
 
-.text-box {
+.header__text-box {
   text-align: center;
   position: absolute;
   top: 30%;
   left: 50%;
   transform: translateX(-50%);
+
   .heading-primary {
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
     color: $white;
     text-transform: uppercase;
     //fix for shaking animation
     backface-visibility: hidden;
 
-    .heading-primary-main {
+    .heading-primary--main {
       display: block;
-      font-size: 60px;
+      font-size: 6rem;
       font-weight: 400;
-      letter-spacing: 35px;
+      letter-spacing: 3.5rem;
       //animation
       animation: moveInLeft 0.8s ease-in;
     }
 
-    .heading-primary-sub {
+    .heading-primary--sub {
       display: block;
-      font-size: 20px;
+      font-size: 2rem;
       font-weight: 400;
-      letter-spacing: 17.4px;
+      letter-spacing: 1.74rem;
       //animation
       animation: moveInRight 0.8s ease-in;
     }
@@ -84,16 +89,17 @@ header {
 .btn {
   animation: fadeIn 2s;
   position: relative;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
   color: $textColor;
   text-decoration: none;
   text-transform: uppercase;
-  border-radius: 100px;
+  border-radius: 10rem;
+  font-size: 1.6rem;
 
   &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba($black, 0.2);
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba($black, 0.2);
     transition: all 0.2s;
 
     &::after {
@@ -103,8 +109,8 @@ header {
   }
 
   &:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba($black, 0.2);
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba($black, 0.2);
   }
 
   &::after {
@@ -112,7 +118,7 @@ header {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -120,7 +126,7 @@ header {
     transition: all 0.4s;
   }
 
-  &-white {
+  &--white {
     background-color: $white;
     &::after {
       background-color: $white;
@@ -140,7 +146,7 @@ header {
 
 @keyframes moveInRight {
   0% {
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
     opacity: 0;
   }
 
@@ -152,7 +158,7 @@ header {
 
 @keyframes moveInLeft {
   0% {
-    transform: translateX(100px);
+    transform: translateX(10rem);
     opacity: 0;
   }
 
