--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,169 +1,15 @@
-//colors
-$lightGreen: #7ed56f;
-$mediumGreen: #55c57a;
-$darkGreen: #28b485;
-
-$textColor: #777;
-$white: #fff;
-$black: #000;
-
-//reset
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  //setts the root size
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: $textColor;
-  padding: 3rem;
-}
-
-//Header
-header {
-  position: relative;
-  height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($lightGreen, 0.8),
-      rgba($darkGreen, 0.8)
-    ),
-    url(./img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-}
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-
-  .header__logo {
-    height: 3.5rem;
-  }
-}
-
-.header__text-box {
-  text-align: center;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translateX(-50%);
-
-  .heading-primary {
-    margin-bottom: 2rem;
-    color: $white;
-    text-transform: uppercase;
-    //fix for shaking animation
-    backface-visibility: hidden;
-
-    .heading-primary--main {
-      display: block;
-      font-size: 6rem;
-      font-weight: 400;
-      letter-spacing: 3.5rem;
-      //animation
-      animation: moveInLeft 0.8s ease-in;
-    }
-
-    .heading-primary--sub {
-      display: block;
-      font-size: 2rem;
-      font-weight: 400;
-      letter-spacing: 1.74rem;
-      //animation
-      animation: moveInRight 0.8s ease-in;
-    }
-  }
-}
-
-.btn {
-  animation: fadeIn 2s;
-  position: relative;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  color: $textColor;
-  text-decoration: none;
-  text-transform: uppercase;
-  border-radius: 10rem;
-  font-size: 1.6rem;
-
-  &:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba($black, 0.2);
-    transition: all 0.2s;
-
-    &::after {
-      transform: scale(1.2);
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba($black, 0.2);
-  }
-
-  &::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-
-  &--white {
-    background-color: $white;
-    &::after {
-      background-color: $white;
-    }
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    transform: translateX(-10rem);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes moveInLeft {
-  0% {
-    transform: translateX(10rem);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
+//abstracts
+@import "./abstracts/functions";
+@import "./abstracts/mixins";
+@import "./abstracts/variables";
+//base
+@import "./base/animations";
+@import "./base/base";
+@import "./base/typography";
+@import "./base/utilities";
+//components
+@import "./components/button";
+//layout
+@import "./layout/header";
+//pages
+@import "./pages/home";
