added custom grid

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -6,3 +6,8 @@ $darkGreen: #28b485;
 $textColor: #777;
 $white: #fff;
 $black: #000;
+
+//grid
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
