aboutsection I: Heading and gridlayout

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -23,3 +23,19 @@
     animation: moveInRight 0.8s ease-in;
   }
 }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, $lightGreen, $darkGreen);
+  transition: all 0.2s;
+  //text color gradient effect
+  display: inline-block;
+  -webkit-background-clip: text;
+  color: transparent;
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($black, 0.2);
+  }
+}
