--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,6 +3,8 @@ $lightGreen: #7ed56f;
 $mediumGreen: #55c57a;
 $darkGreen: #28b485;
 
+$grey-light-1: #f7f7f7;
+
 $textColor: #777;
 $white: #fff;
 $black: #000;
