--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -45,3 +45,25 @@
     }
   }
 }
+
+.btn-text {
+  font-size: 1.6rem;
+  color: $lightGreen;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid $lightGreen;
+  padding: 3px;
+  transition: all 0.4s;
+
+  &:hover {
+    color: $white;
+    background-color: $lightGreen;
+    box-shadow: 0 1rem 2rem rgba($black, 0.2);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($black, 0.2);
+    transform: translateX(-1px);
+  }
+}
