--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,3 +3,23 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+.section-featurs {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($lightGreen, 0.8),
+      rgba($darkGreen, 0.8)
+    ),
+    url(./img/nat-4.jpg);
+  background-size: cover;
+  background-position: top;
+
+  transform: skewY(-5deg);
+  margin-top: -10rem;
+
+  //direct child selector
+  & > * {
+    transform: skewY(5deg)
+  }
+}
