--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,6 +3,13 @@ $lightGreen: #7ed56f;
 $mediumGreen: #55c57a;
 $darkGreen: #28b485;
 
+//tour-section
+$lightYellow: #ffb900;
+$redYellow: #ff7730;
+$lightBlue: #2998ff;
+$darkBlue: #5643fa;
+
+
 $grey-light-1: #f7f7f7;
 
 $textColor: #777;
