--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -23,3 +23,9 @@
     transform: skewY(5deg)
   }
 }
+
+.section-tours {
+  padding: 20rem 0;
+  background-color: $grey-light-1;
+  margin-top: -9rem;
+}
