--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -9,7 +9,6 @@ $redYellow: #ff7730;
 $lightBlue: #2998ff;
 $darkBlue: #5643fa;
 
-
 $grey-light-1: #f7f7f7;
 
 $textColor: #777;
@@ -20,3 +19,7 @@ $black: #000;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+//shadows
+$shadow-light: 0 1.5rem 4rem rgba($black, 0.15);
+$shadow-medium: 0 3rem 6rem rgba($black, 0.1);
