--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -40,8 +40,18 @@
 
   &--white {
     background-color: $white;
+
     &::after {
       background-color: $white;
+    }
+  }
+
+  &--green {
+    background-color: $lightGreen;
+    color: $white;
+
+    &::after {
+      background-color: $lightGreen;
     }
   }
 }
