--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,37 +1,153 @@
 .card {
-    perspective: 150rem;
-    -moz-perspective: 150rem;
+  //functionality
 
-    &__side {   
-        height: 50rem;
-        transition: all .8s;
-        backface-visibility: hidden;
-        position: relative;
-        border-radius: 3px;
-        box-shadow: 0 1.5rem 4rem rgba($black, .15);
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
 
-        &--front {
-            background-color: $white;
+  &:hover &__side--front {
+    transform: rotateY(180deg);
+  }
+
+  &:hover &__side--back {
+    transform: rotateY(0deg);
+  }
+
+  &__side {
+    height: 52rem;
+    transition: all 0.8s;
+    backface-visibility: hidden;
+    position: relative;
+    border-radius: 3px;
+    box-shadow: $shadow-light;
+    overflow: hidden;
+
+    &--back {
+      transform: rotateY(-180deg);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      &-1 {
+        background-image: linear-gradient(
+          to bottom right,
+          $lightYellow,
+          $redYellow
+        );
+      }
+      &-2 {
+        background-image: linear-gradient(
+          to bottom right,
+          $lightGreen,
+          $darkGreen
+        );
+      }
+      &-3 {
+        background-image: linear-gradient(
+          to bottom right,
+          $lightBlue,
+          $darkBlue
+        );
+      }
+    }
+  }
+  // frontisde styling
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    &--1 {
+      background-image: linear-gradient(
+          to bottom right,
+          $lightYellow,
+          $redYellow
+        ),
+        url("./img/nat-5.jpg");
+    }
+    &--2 {
+      background-image: linear-gradient(
+          to bottom right,
+          $lightGreen,
+          $darkGreen
+        ),
+        url("./img/nat-6.jpg");
+    }
+    &--3 {
+      background-image: linear-gradient(to bottom right, $lightBlue, $darkBlue),
+        url("./img/nat-7.jpg");
+    }
+  }
+  &__heading {
+    position: absolute;
+    top: 12rem;
+    text-align: right;
+    right: 2rem;
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: $white;
+    width: 75%;
+    &-wrapper {
+      padding: 1rem;
+      box-decoration-break: clone;
+      &--1 {
+        background-image: linear-gradient(
+          to right bottom,
+          rgba($lightYellow, 0.85),
+          rgba($redYellow, 0.85)
+        );
+      }
+      &--2 {
+        background-image: linear-gradient(
+          to right bottom,
+          rgba($lightGreen, 0.85),
+          rgba($darkGreen, 0.85)
+        );
+      }
+      &--3 {
+        background-image: linear-gradient(
+          to right bottom,
+          rgba($lightBlue, 0.85),
+          rgba($darkBlue, 0.85)
+        );
+      }
+    }
+  }
+  &__details {
+    padding: 3rem;
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+        &:not(:last-child) {
+          border-bottom: 1px solid #eee;
         }
-
-        &--back {
-            transform: rotateY(-180deg);
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-
-            &-1 {
-                background-image: linear-gradient(to bottom right, $lightYellow, $redYellow)
-            }
-        }
+      }
     }
-
-    &:hover &__side--front {
-        transform: rotateY(180deg)
-    }
-
-    &:hover &__side--back {
-        transform: rotateY(0deg)
-    }
+  }
+  // backside styling
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  &__price-box {
+    text-align: center;
+    color: $white;
+    margin-bottom: 8rem;
+  }
+  &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 100;
+  }
 }
