--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -20,7 +20,7 @@
 
   //direct child selector
   & > * {
-    transform: skewY(5deg)
+    transform: skewY(5deg);
   }
 }
 
@@ -28,4 +28,9 @@
   padding: 20rem 0;
   background-color: $grey-light-1;
   margin-top: -9rem;
+}
+
+.section-stories {
+  padding: 15rem 0;
+  background-color: $grey-light-1;
 }
